--- a/readme
+++ b/readme
@@ -2,3 +2,5 @@
 2. install CODESYS 3.5.15.30
 3. download the code paste it in documents or refer to word file and make your own code.
 4. there might be issues in if you try opening in a diffrent version.
+5. download from: https://store.codesys.com/codesys.html?___store=en#All%20versions
+You can get the free version for practice
